# OOP_course

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pytest_check  pytest_check.yaml
oop/part_1/class_and_static_methods/: appstore.py  card_check.py  data_center.py  factory.py  form_login.py  viber.py  video.py
oop/part_1/class_methods/: database.py  graph.py  media_player.py  stream_reader.py  translator.py
oop/part_1/classes_and_objects/: car.py  dictionary.py  figure.py  goods.py  notes.py  person.py  travel_blog.py
oop/part_1/initializer_init/: cart.py  cpu.py  figures.py  graph.py  money.py  point.py  triangle_checker.py
oop/part_1/new_method/: dialog.py  factory.py  point.py  singleton_five.py
oop/part_2/descriptors/: bag.py  float_value.py  super_shop.py  tv_program.py  validate_form.py
oop/part_2/private_public_method_setters_and_getters/: book.py  clock.py  email_validator.py  line.py  linked_list.py  money.py  rectangle_point.py
oop/part_3/: getitem_setitem_delitem.py
part_1/classes_and_objects/: database.py
tests/: conftest.py  test_class_and_static_methods.py  test_class_methods.py  test_classes_and_object.py  test_new_methods.py
tests/chapter1/: test_class_and_static_methods.py  test_classes_and_object.py  test_data_center.py  test_initializer_init.py
tests/chapter2/: test_book.py  test_descriptors.py  test_email_validator.py  test_line.py  test_money.py  test_private_public_method.py  test_property.py  test_rectangle_point.py
tests/chapter3/: test_call.py  test_setattr_getattr_getattribute_delattr.py
(+96 files in other folders)
