[tool.poetry]
name = "OOP_course"
version = "0.1.0"
description = "OOP course by Sergei Balakirev on stepik"
authors = ["seeu359 <a.ch3re359@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
